# crowd-check

./: .gitignore  README  README.md  camera_nodes.json
edge-node/: .gitignore  README.md  pyproject.toml
edge-node/dataset/: .gitignore
edge-node/src/: sender.py
main-node/: README.md  docker-compose.yaml  pyproject.toml
main-node/clickhouse/init/: 01-schema.sql
main-node/grafana/dashboards/: crowd-check-overview.json
main-node/grafana/provisioning/dashboards/: dashboard-provider.yml
main-node/grafana/provisioning/datasources/: clickhouse.yml
main-node/src/: camera_registry.py  clickhouse_config.py  config.py  detection.py  hardware.py  main.py  network.py  reciever.py  statistics.py
main-node/src/gui/: __init__.py  camera_widget.py  main_window.py  theme.py
